# peaksjs-widget

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.md  codecov.yml  install.json  package-lock.json  package.json  peaksjs_widget.json  pyproject.toml  pytest.ini  webpack.config.js
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
examples/: introduction.ipynb
peaksjs_widget/: __init__.py  _frontend.py  _version.py  widget.py
peaksjs_widget/nbextension/: extension.js
peaksjs_widget/tests/: conftest.py  test_example.py  test_nbextension_path.py
src/: extension.ts  index.ts  plugin.ts  version.ts  widget.ts  zoom.utils.ts
