[build-system]
requires = [
    "hatchling>=1.3.1",
    "jupyterlab==3.*",
]
build-backend = "hatchling.build"

[project]
name = "peaksjs_widget"
description = "ipywidget to interact with audio waveforms through peaks.js"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.7"
authors = [
    { name = "AntoineDaurat", email = "ktonalberlin@gmail.com" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "ipywidgets>=7.0.0",
    "pydub",
    "numpy",
]
version = "0.1.4"

[project.optional-dependencies]
docs = [
    "jupyter_sphinx",
    "nbsphinx",
    "nbsphinx-link",
    "pypandoc",
    "pytest_check_links",
    "recommonmark",
    "sphinx>=1.5",
    "sphinx_rtd_theme",
]
examples = []
test = [
    "nbval",
    "pytest-cov",
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/ktonal/peaksjs-widget"

[tool.hatch.build]
artifacts = [
    "peaksjs_widget/nbextension/index.*",
    "peaksjs_widget/labextension/*.tgz",
    "peaksjs_widget/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"peaksjs_widget/nbextension" = "share/jupyter/nbextensions/peaksjs_widget"
"peaksjs_widget/labextension" = "share/jupyter/labextensions/peaksjs_widget"
"./install.json" = "share/jupyter/labextensions/peaksjs_widget/install.json"
"./peaksjs_widget.json" = "etc/jupyter/nbconfig/notebook.d/peaksjs_widget.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "peaksjs_widget/nbextension/index.js",
    "peaksjs_widget/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"

[tool.tbump]
# Uncomment this if your project is hosted on GitHub:
# github_url = "https://github.com/<user or organization>/<project>/"

[[tool.tbump.file]]
src = "pyproject.toml"
version_template = "version = \"{major}.{minor}.{patch}\""

[[tool.tbump.file]]
src = "peaksjs_widget/_version.py"
version_template = "version_info = ({major}, {minor}, {patch})"

[[tool.tbump.file]]
src = "peaksjs_widget/_frontend.py"
version_template = "module_version = \"^{major}.{minor}.{patch}\""

[[tool.tbump.file]]
src = "package.json"
version_template = "\"version\": \"{major}.{minor}.{patch}\","

[tool.tbump.version]
current = "0.1.4"

# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

